tests/tooling/fixtures/native/recovery/negative/negative_separator_literal_parser_consecutive_underscore.objc3
// Expected diagnostic code(s): O3P103.
module NegativeSeparatorLiteralParserConsecutiveUnderscore;

let value = 1__2;

fn main() -> i32 {
  return 0;
}
